[package]
name = "starknet-specs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
rstest = "0.23.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
